 - Util: Fix PowerPC PNG read/write pixel order
 - GBA Video: Fix edge case with sprite blend modes and semitransparency
 - GBA Video: Fix objwin and blending interaction on sprites
 - GBA Video: Fix OBJ semitransparency improperly interacting with other blending ops
 - GBA: Fix autodetect problems with some bad dumps of Super Mario Advance 2
 - GBA Memory: Fix bad BIOS Load16 on big endian
Misc:
 - Qt: Window size command line options are now supported
 - Qt: Increase usability of key mapper
 - GBA Memory: Use a dynamically sized mask for ROM memory
 - Qt: Remove useless help icons in dialogs
 - ARM7: Combine shifter-immediate and shifter-register functions to reduce binary size
 - SDL: Support fullscreen in SDL 1.2
 - GBA: Attempting to save a screenshot-style savestate should be allowed without libpng
 - GBA: Better memory handling with PNG savestates
 - GBA Audio: Allow GBAAVStream to have no video callback
 - ARM7: Force disable LTO on two files to work around a GCC bug
 - Libretro: Use anonymous memory mappers for large blocks of memory
 - Qt: Add 'Apply' button to settings window
 - Qt: Prevent savestate window from opening while in multiplayer
 - Qt: Disable menu items in multiplayer that don't make sense to have enabled
 - Qt: Dropping multiplayer windows works more cleanly now
 - GBA BIOS: Implement RegisterRamReset for SIO registers
 - All: Reset next event to cycles instead of zero to interrupt
 - GBA Video: Remove lastHblank, as it is implied
 - GBA: Check for cycle count being too high

0.3.0: (2015-08-16)
Features:
 - Ability to hide individual background layers, or OBJs
 - Ability to mute individual audio channels
 - Palette viewer and exporter
 - Volume control
 - More shortcuts are editable (e.g. quick save/load)
 - Rewind now shows the frame after rewinding
 - Import/Export of GameShark/Action Replay snapshots
 - Add "Step backwards" item for single increment rewind
 - Deadzone estimation for game controllers