@@ -17,6 +17,7 @@ Bugfixes:
  - GBA Video: Fix OBJ semitransparency improperly interacting with other blending ops
  - GBA: Fix autodetect problems with some bad dumps of Super Mario Advance 2
  - GBA Memory: Fix bad BIOS Load16 on big endian
+ - GBA Memory: Fix bad Load8 on big endian
 Misc:
  - Qt: Window size command line options are now supported
  - Qt: Increase usability of key mapper
